--- a/app/globals.css
+++ b/app/globals.css
@@ -69,4 +69,7 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+  .shadow-soft {
+    @apply shadow-[0px_4px_30px_0px_rgba(0,_0,_0,_0.04)];
+  }
 }
